cargo-features = ["edition2024"]
[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
# derive_more = { workspace = true, features = ["display"] }
owo-colors = { workspace = true }
